validation process, so you still have the possibility of loading some limited 
forms of "bad AIML". You may, of course, validate your AIML using any good 
modern XML tool, and it will be able to use the embedded Schematron directives. 
Coincidentally, the reprocessed AAA AIML set available on aitools.org does pass 
this additional test when validated manually.
    *

      The "readme" doc ("Getting Started with Program D") has been somewhat 
over-redacted, since quite a lot needed to be updated to reflect changes in 
property names, etc. Any help in this is greatly appreciated, or it will get 
back to its full glory sooner or later in any case.
    *

      I have a strong desire to include unit testing, but just haven't gotten 
to it yet. The included test cases do do a pretty good job of testing key AIML 
interpreter functionality, but of course it would be very desirable to have a 
complete testing framework that would cover all aspects of the application. 
Again, it's in the pipeline....

4.1.5

The saga continues. Thanks for contributions, tips, assistance with this 
release to Anne Kootstra, Jonathan Roewen, Sven Seelig, Denis Sheynihovich, Kim 
Sullivan, Andrew Teal and Richard Wallace.
- Noel

    * What's New
    * Important Notes on System Requirements
    * Significant Open Issues

What's New

This release of Program D is significant for stability and important 
functionality improvements. Here is a list of highlights:

    *
      Multiple Bot Support

      Program D now supports an unlimited number of bots running from the same 
process. You configure the bots in the startup.xml file. Different bots may 
share one or more AIML files, and memory usage is optimized to minimize 
duplication. Bots can be enabled or disabled easily by toggling an attribute in 
the startup.xml file.

      The example startup.xml file has been moved to the conf directory, and is 
documented inline with XML comments.
    *