@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <?oxygen SCHSchema="../resources/schema/bot-configuration.xsd"?>
 <bots xmlns="http://aitools.org/programd/4.1.5/bot-configuration"
-      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="http://aitools.org/programd/4.1.5/bot-configuration http://aitools.org/programd/4.1.5/bot-configuration.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://aitools.org/programd/4.1.5/bot-configuration http://aitools.org/programd/4.1.5/bot-configuration.xsd">
     <bot id="yourbot" enabled="true">
         <properties href="properties.xml"/>
         <predicates href="predicates.xml"/>
