@@ -79,17 +79,14 @@ GENERAL NOTES
     <entry key="programd.on-uncaught-exceptions.print-stack-trace">true</entry>
     
     <!--Allow use of <system> element? [boolean: false]-->
-    <entry key="programd.os-access-allowed">true</entry>
+    <entry key="programd.os-access-allowed">false</entry>
     
     <!--Allow use of <javascript> element? [boolean: false]-->
-    <entry key="programd.javascript-allowed">true</entry>
+    <entry key="programd.javascript-allowed">false</entry>
     
     <!--Where to write gossip entries.                       [String: logs/gossip.txt]
         * Gossip entries will be written like this:
-          <li>the gossip</li>
-          This enables you to use an XML entity (unfortunately not XInclude)
-          to provide runtime access to the contents of the gossip file. 
-          See resources/testing/testcases.aiml for an example.-->
+          <li>the gossip</li>.-->
     <entry key="programd.gossip.path">logs/gossip.txt</entry>
     
     <!--The string to send when first connecting to the bot. [String: CONNECT]
