@@ -285,6 +285,13 @@ Coincidentally, the reprocessed AAA AIML set available on aitools.org does pass
 this additional test when validated manually.
     *
 
+      The Flash interface has not been tested. Since it has been updated to use 
+an XML template, I doubt it will work with the old Flash interface from Chris 
+Fahey, but it's worth a shot. If somebody with a copy of the Flash authoring 
+tool (yow! that's expensive!) will get in touch with me, I would be glad to 
+coordinate getting this interface working again.
+    *
+
       The "readme" doc ("Getting Started with Program D") has been somewhat 
 over-redacted, since quite a lot needed to be updated to reflect changes in 
 property names, etc. Any help in this is greatly appreciated, or it will get 
